<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingRight="30dp"
    android:paddingLeft="30dp"
    android:paddingTop="60dp"
    android:background="@drawable/grad_bg"
    tools:context=".RegisterActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/regis_account"
            android:gravity="center"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="45sp"/>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp">
        <EditText
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edtUser"
            android:hint="@string/regis_user"
            android:inputType="textEmailAddress"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true">
        <EditText
            android:layout_marginTop="30dp"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edtPass"
            android:hint="@string/regis_pass" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true">
        <EditText
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edtConfirmPass"
            android:hint="@string/regis_repass"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>
    <ProgressBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/loading"
        android:layout_marginTop="30dp"
        android:visibility="gone"
        />
    <Button
        android:layout_marginTop="30dp"
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:textColor="@color/white"
        android:text="@string/regis_register"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:fontFamily="sans-serif-medium"
        android:background="@drawable/btn_bg"/>
</LinearLayout>